# mpdrs

./: Cargo.toml
examples/: example.rs
src/: client.rs  convert.rs  lib.rs  output.rs  proto.rs  search.rs  song.rs  status.rs
tests/: idle.rs  options.rs  outputs.rs  playback.rs  playlist.rs  reflect.rs  search.rs  song.rs  stickers.rs
tests/helpers/: daemon.rs  mod.rs
