[package]
authors = ["Simon Persson <simon@flaskpost.me>"]
description = "A minimal, synchronous MPD library."
homepage = "https://github.com/SimonPersson/mpdrs"
license = "MIT/Apache-2.0"
name = "mpdrs"
repository = "https://github.com/SimonPersson/mpdrs"
version = "0.1.0"
edition = "2021"

[dependencies]
bufstream = { version = "0.1", default-features = false }

[dev-dependencies]
tempdir = "0.3.5"
unix_socket = "0.5.0"
